<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- Common -->
    <string name="app_name">Library</string>
    <string name="check_box_read">Read</string>
    <string name="no_title">No title</string>
    <string name="no_author" tools:ignore="Typos">No author</string>
    <string name="no_date">No date</string>
    <string name="no_isbn">No ISBN</string>
    <string name="read">Read</string>
    <string name="not_read" />
    <string name="save_book_icon">Save</string>
    <string name="add_book_icon">Add</string>
    <string name="book_title">Book title</string>
    <string name="book_author" tools:ignore="Typos">Book author</string>
    <string name="fileprovider" translatable="false">com.sergiodomingues.library.fileprovider</string>

    <!-- Activity label name -->
    <string name="main_activity_label">My Books</string>
    <string name="add_book_activity_label">Add book</string>
    <string name="book_info_activity_label">Book details</string>

    <!-- Fields Validation -->
    <string name="enter_book_title">Enter book title</string>
    <string name="invalid_book_date">Enter a valid date</string>

    <!-- Labels -->
    <string name="about_this_book">About this book</string>

    <!-- Buttons -->
    <string name="take_photo">take photo</string>
    <string name="upload_photo">upload photo</string>

    <!-- Content Description-->
    <string name="desciprion_cover">Cover</string>

    <!-- Dialog options -->
    <string name="delete_option">Delete</string>

    <!-- Hints -->
    <string name="hint_book_title">Title</string>
    <string name="hint_book_isbn">Isbn</string>
    <string name="hint_book_date">Publication date</string>
    <string name="search_query_hint">Enter book title or ISBN</string>
    <string name="search">Search</string>

    <!-- Main Activity -->
    <string name="main_settings_icon">Settings</string>
    <string name="main_add_new_book_option">Add new book</string>
    <string name="main_delete_all_books">Delete all books</string>
    <string name="main_error_updating_books">Could not load list of books</string>
    <string name="main_error_deleting_books">Could not delete your books, please try again later</string>
    <string name="main_alert_dialog_delete_all_title">Delete all books?</string>
    <string name="main_alert_dialog_delete_all_message">This will permanently discard all your books! Are you absolutely sure?</string>
    <string name="main_alert_dialog_accept">Yes</string>
    <string name="main_alert_dialog_cancel">Cancel</string>

    <!-- Search Book Activity-->
    <string name="connection_error">
        Seems like you\'re not connected to internet.
        Please check your connection and try again.
    </string>
    <string name="search_book_activity_label">Search book</string>
    <string name="search_error">Could search books</string>

    <!-- Add Book -->
    <string name="load_photo_choose_option">Choose an option</string>
    <string name="load_photo_content_description">Load photo for book cover</string>
</resources>


