<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".BookInfoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_book_title"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_title"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_book_author"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_author"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_book_isbn"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_isbn"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_book_date"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_date"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:gravity="center"
        />

</LinearLayout>