<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        android:gravity="start"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_author"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:gravity="start"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

    <TextView
        android:id="@+id/bookRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_read"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:layout_toEndOf="@+id/bookAuthor"/>

</RelativeLayout>